# qpmpc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml
doc/: Makefile
doc/src/: conf.py  developer-notes.rst  examples.rst  index.rst  installation.rst  usage.rst
examples/: cart_pole.py  humanoid_one_step.py  humanoid_step.py  humanoid_stepping.py  lipm_walking.py  lipm_walking_controller.py  triple_integrator.py  wheeled_inverted_pendulum.py
ltv_mpc/: __init__.py  build_mpc.py  build_mpcqp.py  exceptions.py  mpc_problem.py  mpc_qp.py  mpcqp.py  plan.py  problem.py  solution.py  solve_mpc.py  solve_mpcqp.py  utils.py
ltv_mpc/live_plots/: __init__.py  cart_pole_plot.py  live_plot.py  wheeled_inverted_pendulum_plot.py
ltv_mpc/systems/: __init__.py  cart_pole.py
qpmpc/: __init__.py  exceptions.py  mpc_problem.py  mpc_qp.py  plan.py  solve_mpc.py
qpmpc/live_plots/: __init__.py  live_plot.py  wheeled_inverted_pendulum_plot.py
qpmpc/systems/: __init__.py  wheeled_inverted_pendulum.py
tests/: __init__.py  test_humanoid_one_step.py  test_humanoid_stepping.py  test_update_constraint_vector.py  test_wheeled_inverted_pendulum.py
