[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ltv-mpc"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "qpsolvers >=1.8.0",
]
keywords = ["model", "predictive", "control", "linear", "time-varying"]

[project.optional-dependencies]
doc = [
    "sphinx",
]

[project.urls]
Documentation = "https://tasts-robots.org/doc/ltv-mpc/"
Source = "https://github.com/tasts-robots/ltv-mpc"
Tracker = "https://github.com/tasts-robots/ltv-mpc/issues"
Changelog = "https://github.com/tasts-robots/ltv-mpc/blob/main/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "ltv_mpc"

[tool.ruff]
line-length = 79
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.pydocstyle]
convention = "google"
